add new function coefficient

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -8,7 +8,7 @@
     <div class="row">
       <div class="col my-5 text-center" id="form">
       <%= form_with url: answer_path, local:true do |f| %>
-        <h1>年齢を入力してください</h1>
+        <h1>現在の年齢を入力してください</h1>
         <P>※対象年齢10〜69歳(英数字のみ)</P>
         <div class="row">
           <div class="col pt-4 age-textfield">
@@ -69,7 +69,7 @@
       <div class="col-2 d-lg-none"></div>
       <div class="col-8 col-lg-5 pt-5">
         <p class="sub-text text-left">
-          まずは資金計画や保険関係、金融資産運用、不動産関係、相続などの疑問に思ったことを投稿してみてください。
+          まずは資産設計や保険関係、金融資産運用、不動産関係、相続などの疑問に思ったことを投稿してみてください。
           疑問の回答が得られたり、他の方の疑問に答えられることがあれば積極的に回答してみましょう。
         </p>
       </div>
@@ -107,7 +107,7 @@
       <div class="col-8 col-lg-5 pt-4">
         <p class="sub-text text-left">
           各々思い描く幸せは違うと思いますが、金融リテラシーを上げることにより<span class="under">金銭的不安</span>、
-          <span class="under">時間的不安</span>、<span class="under">精神的不安</span>の解消に少しでもご活用していただければ幸いです。
+          <span class="under">精神的不安</span>、<span class="under">時間的不安</span>の解消に少しでもご活用していただければ幸いです。
         </p>
       </div>
     </div>
