--- a/app/views/users/_sidebar.html.erb
+++ b/app/views/users/_sidebar.html.erb
@@ -18,6 +18,12 @@
 </div>
 <div class="row">
   <div class="col pb-4">
+    <%= link_to '積立シミュレーションNEO', coefficient_path, class: 'd-none d-lg-block btn btn-outline-dark' %>
+    <%= link_to '', coefficient_path, class: 'all-btn fas fa-search-dollar fa-2x d-lg-none' %>
+  </div>
+</div>
+<div class="row">
+  <div class="col pb-4">
     <%= link_to '新規投稿', new_post_path, class: 'd-none d-lg-block btn new-btn' %>
     <%= link_to '', new_post_path, class: 'all-btn fas fa-mail-bulk fa-2x d-lg-none' %>
   </div>
