add original function

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -228,3 +228,8 @@ video {
     display: inline-block;
     border-bottom: 3px solid #000;
 }
+
+// 金融リテラシークイズ回答非表示
+#pnl11 {
+    display: none;
+}
