--- a/app/views/homes/coefficient.html.erb
+++ b/app/views/homes/coefficient.html.erb
@@ -1,7 +1,7 @@
 <div class="container min-vh-100">
   <div class="row title pt-5">
     <div class="col">
-      <h1>積立シミュレーションNEO</h1>
+      <h1 class="investment-title">積立シミュレーションNEO</h1>
     </div>
   </div>
   <div class="row info">
@@ -43,7 +43,7 @@
       <!-- ボタン -->
       <div class="row">
         <div class="col pt-4 pb-5">
-          <button type="button" id="btnExec" class="btn btn-outline-dark btn-block">結果を見る</button>
+          <button type="button" id="btnExec" class="btn btn-dark btn-block">結果を見る</button>
         </div>
         <div class="col pt-4 pb-5">
           <%= link_to '戻る', posts_path, class: 'btn btn-outline-dark btn-block' %>
