--- a/app/views/homes/quiz.html.erb
+++ b/app/views/homes/quiz.html.erb
@@ -316,7 +316,7 @@
       結果を見る
     </button>
     <div class="col-12 pt-3"></div>
-    <%= link_to 'ホームに戻る', posts_path, class: 'd-none d-lg-block btn btn-outline-dark btn-block' %>
+    <%= link_to 'ホームに戻る', posts_path, class: 'btn btn-outline-dark btn-block' %>
   </div>
   <!-- 結果を出力 -->
   <div class="card row">
