--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,7 @@
       <%= render 'users/index', users: @users %>
     </div>
     <div class="col-2 d-none d-lg-block">
-      <%= render 'search/searchbar' %>
+      <%= render 'search/searchbar', genres: @genres %>
     </div>
   </div>
 </div>
