--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,7 @@
     </div>
     <!--検索機能-->
     <div class="col-2 d-none d-lg-block">
-      <%= render 'search/searchbar' %>
+      <%= render 'search/searchbar', genres: @genres %>
     </div>
   </div>
 </div>
