--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the search controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// ジャンル検索の文字色
+.list-group-item a {
+  color: #000;
+}
+.list-group-item a:hover {
+  color: #000;
+}
