--- a/app/views/search/_searchbar.html.erb
+++ b/app/views/search/_searchbar.html.erb
@@ -1,10 +1,18 @@
 <div class="row sidebar">
-  <div class="col test-center" id="form">
+  <div class="col-12 test-center" id="form">
     <%= form_with url:search_path, method: :get, local: true do |f| %>
       <%= f.text_field 'search[value]', class: "text-field" %>
       <%= f.select 'search[model]', options_for_select({ "Post" => "post", "User" => "user" }) %>
       <%= f.select 'search[how]', options_for_select({ "キーワード" => "partical", "完全一致" => "match" }) %>
       <%= f.submit :'検索' %>
     <% end %>
+  </div>
+  <div class="col-12 pt-4">
+    <ul class="list-group">
+      <li class="list-group-item"><h5><strong>トレンドジャンル</strong></h5></li>
+      <% genres.each do |genre| %>
+      <li class="list-group-item"><%= link_to genre.name, search_path("search[value]": genre) %></li>
+      <% end %>
+    </ul>
   </div>
 </div>
