--- a/app/views/post_comments/_index.html.erb
+++ b/app/views/post_comments/_index.html.erb
@@ -1,5 +1,5 @@
 <div class="col">
-<% post.post_comments.reverse.each do |post_comment| %>
+<% post.post_comments.each do |post_comment| %>
   <div class="row py-4">
     <div class="col-2"><%= attachment_image_tag post_comment.user, :profile_image, :fill, 60, 60, class: "rounded-circle", fallback: "no_image.jpg", size: "50x50" %></div>
     <div class="col-8">
