--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -39,6 +39,7 @@
       <div class="row">
         <div class="col-2"></div>
         <div class="col-8 py-3"><%= @post.introduction %></div>
+        <div class="col-12 pb-4">︎<%= @post.genre.name %></div>
       </div>
       <div class="row">
         <div class="col-3 text-right">
