--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -7,7 +7,7 @@
         </div>
       </div>
     </div>
-    <div class="col-9 col-lg-6">
+    <div class="col-9 col-lg-6 ml-2">
     <% if @model == "user" %>
       <% if @datas.empty? %>
         <h2 class="text-center">該当する投稿はありません</h2>
